# Perception

./: .gitignore  Readme.md
src/: CMakeLists.txt
src/RVIZ/: infra.rviz  infra_calib.rviz
src/Scripts/: camera_intrinsic_calibration.sh  ground_filter (copy).py  ground_filter.py  relabel_bbox.py  rosbag_record.sh  rotate_and_pub_projection_image.py  rotate_and_pub_right_image_compressed.py  switch_interface.sh  test.py  test.sh  yolo_pose_inference.py
src/Scripts/Transform_utils/: bus_to_node_rotation.py  gen_rotation_matrix.py  global_transform.py  ground_transform.py  measurements.txt  symbolic_solver.py
src/cam_perception/: CMakeLists.txt  package.xml
src/cam_perception/src/: generate_results.py  main.py  requirements.txt  temp.py  utils.py
src/lidar_cam_fusion_py/: CMakeLists.txt  package.xml
src/lidar_cam_fusion_py/launch/: lidar_cam_fusion.launch
src/lidar_cam_fusion_py/src/: lidar_cam_fusion_py_node.py  utils.py
src/lidar_processing/: CMakeLists.txt  package.xml
src/lidar_processing/src/JAX/: cluster.py  filter.py  main.py  test.py  track.py  utils.py
src/lidar_processing/src/Numpy/: cluster.py  filter.py  gui.py  main.py  track.py  utils.py
src/lidar_processing/src/Tensor/: cluster_t.py  filter_t.py  main_t.py  utils_t.py
src/new_perception_module/src/: autoencoder_test.py  f_io_util.py  generate_keypoints.py  main.py  test.py  test_SAM.py  utils.py
